# IM-Hackathon

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SETUP-FOR-TEAMMATE.md  SETUP.md  mkdocs.yml  mkdocs_hooks.py  nginx.conf  pyproject.toml  requirements-query.txt
.github/workflows/: claude-code-review.yml  claude.yml  pre-commit.yml
.streamlit/: config.toml
docs/: BACKLOG.md  NORTH-STAR.md  SCRIPT-LIFECYCLE.md  architecture.md  gcp-migration.md
docs/archive/: README.md
docs/audits/: STATUS.md  audit-20260413T081547Z.md  broken-wikilinks-20260416T112314Z.md  broken-wikilinks-20260416T112339Z.md  broken-wikilinks-20260416T112352Z.md  cycle-10-deep-audit-2026-04-18.md  cycle-10-smoke-2026-04-18.md  cycle-10-smoke-30-2026-04-18.md  cycle-4-case-1-seo-rework-recursion.md  cycle-4-case-2-orphan-skip-insights.md  cycle-4-case-3-auditmate-compounding.md  cycle-4-summary.md  cycle-5-case-bug-j-minimax-silent-fail.md  cycle-5-summary.md  cycle-6-summary.md  cycle-7-summary.md  cycle-8-case-studies-20260417.md  cycle-8-summary-20260417.md  cycle-9-summary.md  dashboard.md  deep-audit-10-pages-2026-04-17.md  error-classes-2026-04-15-autopsy.md  findings.jsonl  intent-review-2026-04-29.md  intent-review-pr260-2026-04-29.md  intent-review-pr262-2026-04-29.md  intent-review-pr277-2026-04-29.md  langfuse-trace-audit-20260415T175816Z.md  metrics-history.jsonl  migration-plan-20260416T150856Z.md  persona-deep-audit-deployed-2026-04-28.md  post-run-metrics-2ba03e55-8e65-43cf-8b07-d420c0f05b9a.json  post-run-metrics-2ba03e55-8e65-43cf-8b07-d420c0f05b9a.md  post-run-metrics-49d8c345-3895-4549-b537-5a7c41527949.json  post-run-metrics-49d8c345-3895-4549-b537-5a7c41527949.md  post-run-metrics-75d7386d-1bba-449d-9873-53c5d3871622.json  post-run-metrics-75d7386d-1bba-449d-9873-53c5d3871622.md  post-run-metrics-8d140301-3d57-4116-ace8-3929ef18ac67.json  post-run-metrics-8d140301-3d57-4116-ace8-3929ef18ac67.md  post-run-metrics-baseline-2026-04-29.json  (+41 more)
docs/diagrams/: compile-agent-arch.excalidraw  compile-agent-langgraph.mmd  compile-pipeline.excalidraw
docs/feedback/: README.md
docs/incidents/: 2026-04-13-phase0-bootstrap.md
docs/issues/: 01-project-spec.md  02-data-model.md  03-email-ingestor.md  05-claude-md-agent-schema.md  07-phased-delivery.md  10-phase1-implementation-plan.md  11-user-personas-and-knowledge-flows.md
docs/proposal/: GBRAIN-QMD-LEARNINGS.md  NORTH-STAR-DRAFT.md  QMD-INTEGRATION-PLAN.md
docs/reviews/: audit-pass2-20260412T211108Z.md  audit-persona-factcheck-20260413T040000Z.md  audit-persona-pm-20260413T040000Z.md  audit-synthesis-20260413T040000Z.md  auto-repair-plan-20260413T084042Z.md  codex-catalog-review-20260413T080000Z.md  codex-priority-review-20260413T090000Z.md  ecosystem-scan-20260412T214246Z.md  improve-internal-20260412T214231Z.md  knowledge-vs-index-20260413T032000Z.md  overnight-plan-20260412T210837Z.md  persona-blind-audit-2026-04-13.md  plan-24h-20260413T031700Z.md  prompt-caching-20260413.md  systemic-quality-20260413T031102Z.md  tool-audit-20260413T050000Z.md
docs/runs/: overnight-20260412T220659Z.md  overnight-20260412T225241Z.md  overnight-20260412T232832Z.md  overnight-20260413T011725Z.md  smoke-5928c151-mid.json  smoke-5928c151-mid.md  smoke-8fa45533-early.md  smoke-ee90d7ce-mid.md  smoke.md  test-baseline.md  thread-batch-mid.md
large_tool_results/: call_2c92c7f20bc640fd9525ffe2
scripts/: apply_merge_candidate.py  audit.py  audit_50_traces.py  audit_systems_entities.py  backfill_domain_frontmatter.py  backfill_messages.py  backfill_source_threads_and_touches.py  backfill_status_active.py  backfill_stubs.py  backfill_trivial.py  backfill_users_threads_participants.py  backfill_wiki_pages.py  check_duplicate_fixtures.py  check_file_sizes.py  check_langfuse.py  check_one_shot_expiry.py  cleanup_auto_stubs.py  compare_models.py  compile_all.py  compile_overnight.sh  compile_parallel.py  consolidate_duplicate_slug.py  dedupe_sources.py  dipstick.py  dump_agent_diagram.py  eval_harness.py  fix_broken_wikilinks.py  fix_dated_h2_sections.py  format_wiki.py  index_wiki.py  ingest_backlog.py  init_db.py  judge_wiki.py  lint_wiki.py  merge_suffix_dupes.py  migrate_entities_to_people.py  migrate_entity_slugs.py  migrate_legacy_pages.py  nightly_trace_audit.py  post_run_metrics.py  (+19 more)
scripts/gcp/: bootstrap.sh  deploy-viewer.sh
src/: budget.py  config.py  utils.py
src/agent/: compiler_agent.py  critique.py  judge.py  prompts.py  reviewer.py  reviewer_result.py  run_state.py  runtime.py  view.py
src/compile/: cache_stats.py  categories.py  compiler.py  critique.py  draft.py  entities.py  judge.py  landing.py  patch.py  prompts.py  reviewer.py  scoring.py  section_shapes.py  tool_call_log.py  validation.py
src/coordinator/: batch_state.py  grouping.py  logging.py  model_pool.py  post_batch.py  preflight.py
src/db/: __init__.py  compare_metrics.py  compile_attempts.py  compile_runs.py  (+11 more)
tests/: _script_loader.py  conftest.py  test_agent_toolbox.py  test_audit.py  test_audit_50_traces.py  test_audit_systems.py  test_backfill_domain_frontmatter.py  test_backfill_source_threads.py  test_backfill_status_active.py  test_check_my_work_gate.py  test_chronological_scope.py  test_cleanup_auto_stubs.py  test_compare_models.py  test_compile_all_deploy.py  test_compile_all_logging.py  test_compile_all_marking.py  test_compile_all_post_batch.py  test_compile_all_stamping.py  test_compile_attempts.py  test_compile_catalog_sync.py  test_compile_preflight.py  test_compile_stall_detection.py  test_compiler_agent_tool_surface.py  test_compiler_tracing.py  test_config.py  test_consolidate_duplicate_slug.py  test_create_entities_schema.py  test_critique.py  test_db_compile_runs.py  test_db_cursors.py  test_db_messages.py  test_db_participants.py  test_db_threads.py  test_db_touched_pages.py  test_db_users.py  test_db_wiki_pages.py  test_drafts_folder.py  test_edit_payload_sanity.py  test_edit_staleness.py  test_email_parse.py  (+70 more)
wiki/: about.md  home.md
(+155 files in other folders)
