[project]
name = "email-knowledge-base"
version = "0.1.0"
description = "Living knowledge base from email — LLM-compiled wiki from Gmail mailing lists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Email ingestion
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "mail-parser>=3.15.0",
    "markitdown[all]>=0.0.1a3",
    # Agent framework
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    # LLM access
    "litellm>=1.50.0",
    # Observability
    "langfuse>=2.50.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-roamlinks-plugin>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
