[project]
name = "email-knowledge-base"
version = "0.1.0"
description = "Living knowledge base from email — LLM-compiled wiki from Gmail mailing lists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Email ingestion
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "markitdown[all]>=0.0.1a3",
    # Agent framework
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    # LLM access
    "litellm>=1.50.0",
    # Observability
    # Pinned to v3 to match self-hosted server at langfuse.intermesh.net (v3.140.0).
    # v4 SDK expects fields the older server doesn't emit (pydantic validation errors)
    # and renamed APIs (`start_as_current_span` is not on 4.x).
    "langfuse>=3,<4",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-roamlinks-plugin>=0.3.2",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pymarkdownlnt>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "BLE",    # flake8-blind-except
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "FURB",   # refurb
    "FLY",    # flynt
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "ICN",    # flake8-import-conventions
    "PGH",    # pygrep-hooks
    "RSE",    # flake8-raise
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "A",      # flake8-builtins
    "N",      # pep8-naming
    "PTH",    # flake8-use-pathlib
    "FA",     # flake8-future-annotations
    "TID",    # flake8-tidy-imports
    "ASYNC",  # flake8-async
    "SLF",    # flake8-self
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # do not perform function calls in argument defaults
    "ARG001",   # unused function argument
    "ARG002",   # unused method argument
    "ISC001",   # conflicts with ruff formatter
    "ASYNC109", # httpx timeout config false positive
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S", "SLF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pymarkdown]
# Wiki-tuned config. Each disable below is justified by a concrete
# false-positive pattern measured against the live corpus on
# 2026-04-17 (~4k topic pages). Hygiene rules with near-zero hits
# stay enabled — they catch real issues without generating noise.
# Headline rule: MD024 (no-duplicate-heading, siblings_only=false) —
# catches cross-level dups (H3 + H2 same title, e.g. the photosearch
# Feedback Frequency Design case).

# Disables — each backed by a documented false-positive pattern:
[tool.pymarkdown.plugins.md013]
enabled = false  # 4176 hits; tables + long bullets legit
[tool.pymarkdown.plugins.md022]
enabled = false  # 770 hits; dense compile output by design
[tool.pymarkdown.plugins.md032]
enabled = false  # 726 hits; dense compile output by design
[tool.pymarkdown.plugins.md033]
enabled = false  # 324 hits; <aside>/<section> in SEO pages are legit
[tool.pymarkdown.plugins.md041]
enabled = false  # 297 hits; YAML frontmatter precedes first heading (mkdocs stack)
[tool.pymarkdown.plugins.md034]
enabled = false  # 256 hits; email-quoted URLs preserve source fidelity
[tool.pymarkdown.plugins.md036]
enabled = false  # 134 hits; `**2026-01-13 (Name)** — …` is the dated-bullet idiom
                 # the prompt teaches in <section_titles>
[tool.pymarkdown.plugins.md031]
enabled = false  # 23 hits; dense compile output
[tool.pymarkdown.plugins.md040]
enabled = false  # 6 hits; code fences mix diff/log/stdout, language-tagging them
                 # would be theatrical

[tool.pymarkdown.plugins.md003]
enabled = false  # 150 hits; mkdocs hooks inject setext H1 at render time
                 # while bodies use atx — platform artifact, not writer bug

# Everything else stays at pymarkdown defaults. MD047, MD007, MD009,
# MD010, MD012, MD018, MD019, MD001, MD004, MD023, MD024, MD025,
# MD026, MD029 all catch real hygiene issues without drowning the
# validator in noise (under 50 hits each corpus-wide).
